# voice-hander

./: .dockerignore  .gitignore  README.md  config.example.yaml  docker-compose.funasr.yml  pyproject.toml  start-frontend.ps1  start.ps1
docker/funasr-realtime/: Dockerfile
docs/: TECHNICAL_RULES.md  TODO_INTERFACES.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.vue  api.ts  styles.css
scripts/: chat.ps1  mock_asr.py  mock_tts.py  smoke_chat.py  start.ps1  voice.ps1
src/intranet_assistant/: cli.py
src/intranet_assistant/adapters/: base.py
src/intranet_assistant/adapters/asr/: http_client.py
src/intranet_assistant/adapters/llm/: openai_compatible.py
src/intranet_assistant/adapters/tts/: http_client.py
src/intranet_assistant/agent/: loop.py
src/intranet_assistant/api/: app.py  schemas.py
src/intranet_assistant/core/: config.py  factory.py
src/intranet_assistant/storage/: audit.py
src/intranet_assistant/tools/: base.py  registry.py  shell.py  windows.py
tests/: test_config.py  test_tool_registry.py
